# Force CMake version 3.1 or above
cmake_minimum_required (VERSION 3.1)

# This project has the name: 18-complex-conjugate
project (18-complex-conjugate)

# Create an executable named 'complex-conjugate' from the source file 'complex-conjugate.cxx'
add_executable(complex-conjugate src/complex-conjugate.cxx)
